# mugshot_korea

./: .gitignore  pyproject.toml
a_board/: forms.py  models.py  urls.py  views.py
a_board/migrations/: 0001_initial.py
a_users/: views.py
core/: settings.py  urls.py
templates/: base.html
templates/a_board/: post_detail.html  post_form.html  post_list.html
templates/a_users/: service_about.html
templates/includes/: footer.html  header.html
templates/partials/: email_form.html
